# silicon-dawn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENCE  Makefile  Pipfile  Procfile  README.md  Rocket.toml  config.toml  docker-compose.override.yml  docker-compose.yml  get.py  pick.py
.forgejo/workflows/: ci.yml
.github/: dependabot.yml
.github/workflows/: rust.yml  scheduled-security-audit.yml
src/: cards.rs  configuration.rs  lib.rs  main.rs  routes.rs  startup.rs
templates/: footer.hbs  index.hbs  index.html  layout.hbs
tests/: routes.rs
