[package]
name = "silicon-dawn"
version = "0.3.3"
authors = ["Amelia Aronsohn <WagThatTail@Me.com>"]
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4.1"
askama = "0.11.1"
config = "0.13"
env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1"

[dev-dependencies]
reqwest = "0.11"
