[package]
name = "silicon-dawn"
version = "0.3.3"
authors = ["Amelia Aronsohn <WagThatTail@Me.com>"]
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-web = "4"
askama = "0.12"
config = "0.14"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
serde = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"

[dev-dependencies]
reqwest = "0.12"
