[package]
name = "silicon-dawn"
version = "0.3.3"
authors = ["Amelia Aronsohn <WagThatTail@Me.com>"]
edition = "2024"

[dependencies]
actix-files = "0.6"
actix-web = "4"
askama = "0.14"
config = "0.15"
env_logger = "0.11"
log = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"

[dev-dependencies]
reqwest = "=0.12.26"
